--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
         <i class="mdi mdi-chevron-double-up page-link" dest="home"></i>
 
         <div class="icon-wrap flex row">
-          <a href="https://www.linkedin.com/in/shanzay-tariq-8831a9222/">
+          <a href="https://www.linkedin.com/in/shanzay-tariq29/">
             <div class="flex icon" id="icon-2">
               <!-- <i class="mdi mdi-linkedin"></i> -->
               <i class="mdi" style="font-size: 30px; font-weight: 700;">in</i>
